deployments/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ginsample
spec:
  selector:
    app: ginsample
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
